# resume

./: .gitignore  ATS_TESTING.md  LICENSE  Makefile  README.md  build.py  pyproject.toml  pytest.ini  requirements.txt  resume.yml  setup_ats_deps.sh  test_ats_friendly.sh
.cursor/rules/: coding-rule.mdc
.github/workflows/: README.md  ats-validation.yml  release.yml  test.yml
src/resume_ats/: __init__.py  cli.py  core.py  exceptions.py  extractors.py  models.py
templates/: awesome-cv.cls  awesomecv.tex.j2  simple.html.j2
tests/: test_ats_compatibility.py  test_modern_ats.py
